add references for the study of the beam dynamic effects

--- a/references.bib
+++ b/references.bib
@@ -464,6 +464,12 @@ http://emetral.web.cern.ch/JUAS/2016/LongitudinalBeamDynamics_JUAS2016_EM.pdf},
   url  =  {https://indico.cern.ch/event/833895/contributions/3577803/attachments/1927226/3190636/intro_sixtracklib.pdf},
   note = {Accessed: 20-07-2022},
 }
+@misc{instabilities_rumulo_li,
+  title = {Instabilities Part II: Longitudinal wake fields - impact on machine elements and beam dynamics},
+  author = {Giovanni Rumolo and Kevin Li},
+  url  =  {https://indico.cern.ch/event/509762/contributions/2450946/attachments/1515079/2373718/London2_Longitudinal_v04a.pdf},
+  note = {Accessed: 20-07-2022},
+}
 
 @article{Schwinzerl:2781835,
       author        = "Schwinzerl, Martin and De Maria, Riccardo and Paraschou,
@@ -478,6 +484,25 @@ http://emetral.web.cern.ch/JUAS/2016/LongitudinalBeamDynamics_JUAS2016_EM.pdf},
       url           = "https://cds.cern.ch/record/2781835",
       doi           = "10.18429/JACoW-IPAC2021-THPAB190",
 }
+
+@misc{benoit_ipac19_impedance,
+  title = {Building the impedance model of a real machine},
+  author = {Benoit Salvant},
+  url  =  {https://accelconf.web.cern.ch/ipac2019/talks/weypls1_talk.pdf},
+  note = {Accessed: 20-07-2022},
+}
+
+@book{Chao:collective,
+      author        = "Chao, Alexander Wu",
+      title         = "{Physics of collective beam instabilities in high energy
+                       accelerators}",
+      publisher     = "Wiley",
+      address       = "New York, NY",
+      year          = "1993",
+      url           = "http://cds.cern.ch/record/246480",
+}
+
+
 
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
