start complex tune shift

--- a/references.bib
+++ b/references.bib
@@ -502,7 +502,16 @@ http://emetral.web.cern.ch/JUAS/2016/LongitudinalBeamDynamics_JUAS2016_EM.pdf},
       url           = "http://cds.cern.ch/record/246480",
 }
 
-
+@article{Vlasov:426186,
+      author        = "Vlasov, A",
+      title         = "{On the kinetic theory of an assembly of particles with
+                       collective interaction}",
+      journal       = "Russ. Phys. J.",
+      volume        = "9",
+      pages         = "25-40",
+      year          = "1945",
+      url           = "http://cds.cern.ch/record/426186",
+}
 
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
