--- a/references.bib
+++ b/references.bib
@@ -513,6 +513,28 @@ http://emetral.web.cern.ch/JUAS/2016/LongitudinalBeamDynamics_JUAS2016_EM.pdf},
       url           = "http://cds.cern.ch/record/426186",
 }
 
+@techreport{Sacherer:322545,
+      author        = "Sacherer, Frank James",
+      title         = "{Methods for computing bunched-beam instabilities}",
+      institution   = "CERN",
+      address       = "Geneva",
+      reportNumber  = "CERN-SI-BR-72-5",
+      month         = "Sep",
+      year          = "1972",
+      url           = "https://cds.cern.ch/record/322545",
+}
+
+@article{Sacherer:322645,
+      author        = "Sacherer, F J",
+      title         = "{Transverse bunched beam instabilities - Theory}",
+      reportNumber  = "CERN-MPS-INT-BR-74-8",
+      pages         = "5 p",
+      month         = "Apr",
+      year          = "1974",
+      url           = "https://cds.cern.ch/record/322645",
+}
+
+
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
   author = {Baudrenghien, P. and Mastoridis, T.},
