add list of symbols

--- a/mypackages.sty
+++ b/mypackages.sty
@@ -6,11 +6,14 @@
 \graphicspath{ {images/} }
 \usepackage{hyperref}
 \usepackage{fourier} %type style
-
+\usepackage{lipsum} 
 \usepackage{amsmath}  % improve math presentation
 \usepackage{graphicx, wrapfig, subcaption, setspace, booktabs}
 \usepackage{enumitem} % remove space between items
 
+\usepackage{nomencl} % for list of symbols
+
+%\usepackage[symbols,nogroupskip,sort=none]{glossaries-extra}
 %-------------------------------
 % Header and Footer
 %-------------------------------
