--- a/main.tex
+++ b/main.tex
@@ -2,12 +2,31 @@
 \usepackage{mypackages}
 \usepackage{listofsymbols}
 
+% start attempt for new list of symbols
+\newcommand{\addsymbol}[3]{%
+  \symboldisplay{#1}{#2}\\%
+  \setelem{#3}{#1}
+}
+\newcommand{\symboldisplay}[2]{%
+  $#1$ \parbox{5in}{\dotfill #2}%
+}
+\def\setelem#1{\expandafter\gdef\csname myarray(#1)\endcsname} 
+\def\dispsymbol#1{\csname myarray(#1)\endcsname}
+
+
+
 % Create new commands for convinience
 \newcommand{\fourierxform}[1]{\hat{#1}}
 \newcommand{\imagunit}{{i}}
 
 \setcounter{tocdepth}{5} % These lines are needed for subsubsection to appear
 \setcounter{secnumdepth}{5}
+
+\makeglossary
+\makenomenclature
+\setlength{\nomlabelwidth}{2cm} % adjust the width between symbols and notation
+\renewcommand{\nomname}{List of Symbols}
+
 
 \begin{document}
 \frontmatter
@@ -26,19 +45,27 @@
 \input{head/abstract}
 \input{head/acknowledgments}
 
+\tableofcontents
+
+
 \listoffigures
 \addcontentsline{toc}{chapter}{List of figures}
 \listoftables
 \addcontentsline{toc}{chapter}{List of tables}
 
-\newpage
 
 \thispagestyle{plain} % removing headings from this specific page
 \input{head/symbols.sub}
 \listofsymbols
 \addcontentsline{toc}{chapter}{List of symbols}
 
-\tableofcontents
+\newpage
+
+\input{symbols.tex}
+\printnomenclature
+\addcontentsline{toc}{chapter}{List of symbols v2}
+
+
 
 \mainmatter
 
@@ -46,7 +73,7 @@
 \chapter{Introduction}
 \input{chapters/introduction}
 
-\chapter{Basics of accelerator beam dynamics}
+\chapter{Basics of accelerator beam dynamics}\label{Ch:theory}
 \input{chapters/chapter02}
 
 \chapter{Theory of Crab Cavity noise induced emittance growth}\label{Ch:CC_noise_theory}
