--- a/symbols.tex
+++ b/symbols.tex
@@ -11,6 +11,17 @@
 \nomenclature[11]{$R$}{Radius of an accelerator ring.}
 \nomenclature[12]{$E_0, p_0, v_0$}{Energy, momentum and velocity of the reference particle.}
 \nomenclature[13]{$\beta_0, \gamma_0$}{Relativistic beta and gamma (Lorentz factor).}
-\nomenclature[14]{$e, m_p$}{The proton charge and rest mass respectively.}
+\nomenclature[14]{$e$, $m_p$}{The proton charge and rest mass respectively.}
 \nomenclature[15]{$\rho$}{Bending radius.}
-\nomenclature[16]{$c$}{Speed of light.}
+\nomenclature[16]{$c$}{Speed of light in vaccum.}
+\nomenclature[17]{$s$}{Location along the ring.}
+\nomenclature[18]{$(x, x^\prime)$}{Horizontal co-ordinates: position and normalised  momentum to the momentum of the reference particle.} % or conjugate momentum, M. Schenl
+\nomenclature[19]{$(y, y^\prime)$}{Vertical co-ordinates: position and normalised momentum to the momentum of the reference particle.} % or conjugate momentum
+\nomenclature[20]{$(z,\delta)$}{Longitudinal co-ordinates: position and momentum offset.} % or conjugate momentum
+\nomenclature[21]{$(p_x, p_y, p_z)$}{Particle's momentum in the horizontal, vertical and longitudinal plane respectively.} 
+\nomenclature[22]{$t$}{Time in [s].} 
+\nomenclature[23]{$b_n$, $\alpha_n$}{Normal and skew multipole coefficients.} 
+\nomenclature[24]{$k_n$}{Normalised normal multipole coefficient.} 
+\nomenclature[25]{$\psi_u(s)$}{Phase advance from the start of the ring, $s_0$, where $u=(x,y)$.} 
+\nomenclature[26]{$\Delta \psi_u$}{Phase advance between two locations along the ring, with $u=(x,y)$.} 
+\nomenclature[27]{$\alpha_u(s)$, $\beta_u(s)$, $\gamma_u(s)$}{Twiss or Courant-Snyder parameters, where $u=(x,y,z)$.} 
