--- a/symbols.tex
+++ b/symbols.tex
@@ -24,4 +24,31 @@
 \nomenclature[24]{$k_n$}{Normalised normal multipole coefficient.} 
 \nomenclature[25]{$\psi_u(s)$}{Phase advance from the start of the ring, $s_0$, where $u=(x,y)$.} 
 \nomenclature[26]{$\Delta \psi_u$}{Phase advance between two locations along the ring, with $u=(x,y)$.} 
-\nomenclature[27]{$\alpha_u(s)$, $\beta_u(s)$, $\gamma_u(s)$}{Twiss or Courant-Snyder parameters, where $u=(x,y,z)$.} 
+\nomenclature[27]{$\alpha_u(s)$, $\beta_u(s)$, $\gamma_u(s)$}{Alpha, beta and gamma functions respectively or Twiss or Courant-Snyder parameters, with $u=(x,y,z)$.} 
+\nomenclature[28]{$Q_x$, $Q_y$}{Horizontal and vertical betatron tunes.}
+\nomenclature[29]{$Q_{x0}$, $Q_{y0}$}{Horizontal and vertical working points of an accelerator.} 
+\nomenclature[30]{$J_x$, $J_y$}{Horizontal and vertical action.} 
+\nomenclature[31]{$u_N$, $u^\prime_N$}{Normalised transverse co-ordinates, with $u=(x,y)$.} 
+\nomenclature[32]{$\epsilon^{\mathrm{geom}}_x$, $\epsilon^{\mathrm{geom}}_y$}{Horizontal and vertical geometric emittance of the beam.} 
+\nomenclature[33]{$\epsilon_x$, $\epsilon_y$}{Horizontal and vertical normalised emittance of the beam.} 
+\nomenclature[34]{$D_x$, $D_y$}{Horizontal and vertical dispersion functions.} 
+\nomenclature[35]{$Q_x^{(n)}$, $Q_y^{(n)}$}{Horizontal and vertical chromaticity of nth order.} 
+\nomenclature[36]{$Q_x^{\prime}$, $Q_x^{\prime \prime}$}{Horizontal chromaticity first and second order respectively.} 
+\nomenclature[37]{$Q_y^{\prime}$, $Q_y^{\prime \prime}$}{Vertical chromaticity first and second order respectively.} 
+\nomenclature[38]{$\alpha_{xx}$, $\alpha_{yy}$, $\alpha_{xy}$}{Horizontal, vertical and cross-term detuning coefficients respectively in units of [1/m].} 
+\nomenclature[39]{$T_\mathrm{rev}$}{Revolution period of an accelerator.}
+\nomenclature[40]{$\phi_\mathrm{RF}$}{The phase of the main RF system of an accelerator.}
+\nomenclature[41]{$\omega_\mathrm{RF}$}{The angular frequency of the main RF system of an accelerator.}
+\nomenclature[42]{$h$}{Harmonic number.}
+\nomenclature[43]{$\phi_s$}{The phase of the synchronous particle.}
+\nomenclature[44]{$V_\mathrm{RF}$, $f_\mathrm{RF}$}{Voltage and frequency of the main RF system of an accelerator.}
+\nomenclature[45]{$\alpha_p$}{Momentum compaction factor.}
+\nomenclature[46]{$\eta_p$}{Phase slip factor.}
+\nomenclature[47]{$\gamma_\mathrm{tr}$}{Transition energy.}
+\nomenclature[48]{$Q_s$, $\omega_s$}{Synchrotron tune and angular synchrotron frequency respectively.}
+\nomenclature[49]{$W^\mathrm{const}_x(z)$, $W^\mathrm{const}_y(z)$}{Horizontal and vertical constant wake functions.}
+\nomenclature[50]{$W^\mathrm{dip}_x(z)$, $W^\mathrm{dip}_y(z)$}{Horizontal and vertical dipolar wake functions.}
+\nomenclature[50]{$W^\mathrm{quad}_x(z)$, $W^\mathrm{quad}_y(z)$}{Horizontal and vertical quadrupolar wake functions.}
+\nomenclature[51]{$Z_x(\omega)$, $Z_y(\omega)$}{Horizontal and vertical impedance.}
+\nomenclature[52]{$\Delta \Omega_u ^{(l)} $}{Horizontal and vertical complex coherent frequency shift of headtail mode $l$, with $u=(x,y)$.}
+\nomenclature[53]{$i$}{Imaginary unit.}
