--- a/references.bib
+++ b/references.bib
@@ -534,6 +534,32 @@ http://emetral.web.cern.ch/JUAS/2016/LongitudinalBeamDynamics_JUAS2016_EM.pdf},
       url           = "https://cds.cern.ch/record/322645",
 }
 
+@article{Lebedev:248620,
+      author        = "Lebedev, V and Parkhomchuk, V V and Shiltsev, V D and
+                       Stupakov, G",
+      title         = "{Emittance growth due to noise and its suppression with
+                       the feedback system in large hadron colliders}",
+      journal       = "Part. Accel.",
+      reportNumber  = "SSCL-P-188, SSCL-Preprint-188",
+      volume        = "44",
+      pages         = "147-164. 28 p",
+      month         = "Mar",
+      year          = "1993",
+      url           = "https://cds.cern.ch/record/248620",
+}
+
+@article{Lebedev:248622,
+      author        = "Lebedev, V",
+      title         = "{Computer simulation of the emittance growth due to noise
+                       in large hadron colliders}",
+      journal       = "Part. Accel.",
+      reportNumber  = "SSCL-P-191, SSCL-Preprint-191",
+      volume        = "44",
+      pages         = "165-199. 57 p",
+      month         = "Mar",
+      year          = "1993",
+      url           = "https://cds.cern.ch/record/248622",
+}
 
 @article{PhysRevSTAB.18.101001,
   title = {Transverse emittance growth due to rf noise in the high-luminosity LHC crab cavities},
