--- a/symbols.tex
+++ b/symbols.tex
@@ -15,9 +15,9 @@
 \nomenclature[15]{$\rho$}{Bending radius.}
 \nomenclature[16]{$c$}{Speed of light in vaccum.}
 \nomenclature[17]{$s$}{Location along the ring.}
-\nomenclature[18]{$(x, x^\prime)$}{Horizontal co-ordinates: position and normalised  momentum to the momentum of the reference particle.} % or conjugate momentum, M. Schenl
-\nomenclature[19]{$(y, y^\prime)$}{Vertical co-ordinates: position and normalised momentum to the momentum of the reference particle.} % or conjugate momentum
-\nomenclature[20]{$(z,\delta)$}{Longitudinal co-ordinates: position and momentum offset.} % or conjugate momentum
+\nomenclature[18]{$(x, x^\prime)$}{Horizontal co-ordinates: position and normalised  momentum to the momentum of the reference particle in units of [m] and [rad] respectively.} % or conjugate momentum, M. Schenl
+\nomenclature[19]{$(y, y^\prime)$}{Vertical co-ordinates: position and normalised momentum to the momentum of the reference particle in units of [m] and [rad] respectively.} % or conjugate momentum
+\nomenclature[20]{$(z,\delta)$}{Longitudinal co-ordinates: position in units of [m] and momentum offset (no units).} % or conjugate momentum
 \nomenclature[21]{$(p_x, p_y, p_z)$}{Particle's momentum in the horizontal, vertical and longitudinal plane respectively.} 
 \nomenclature[22]{$t$}{Time in [s].} 
 \nomenclature[23]{$b_n$, $\alpha_n$}{Normal and skew multipole coefficients.} 
