sign off thrusdtay, wrote CC signal

--- a/symbols.tex
+++ b/symbols.tex
@@ -52,3 +52,5 @@
 \nomenclature[51]{$Z_x(\omega)$, $Z_y(\omega)$}{Horizontal and vertical impedance.}
 \nomenclature[52]{$\Delta \Omega_u ^{(l)} $}{Horizontal and vertical complex coherent frequency shift of headtail mode $l$, with $u=(x,y)$.}
 \nomenclature[53]{$i$}{Imaginary unit.}
+\nomenclature[54]{$V_\mathrm{CC}$}{Peak amplitude of the Crab Cavity voltage.}
+\nomenclature[55]{$f_\mathrm{CC}$}{Frequency of the Crab Cavity.}
