--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,9 @@
 % Create new commands for convinience
 \newcommand{\fourierxform}[1]{\hat{#1}}
 \newcommand{\imagunit}{{i}}
+\newcommand{\CCvoltage}{{V_\mathrm{CC}}}
+\newcommand{\CCfrequency}{{f_\mathrm{CC}}}
+
 
 \setcounter{tocdepth}{5} % These lines are needed for subsubsection to appear
 \setcounter{secnumdepth}{5}
