--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 % Create new commands for convinience
 \newcommand{\fourierxform}[1]{\hat{#1}}
 \newcommand{\imagunit}{{i}}
-\newcommand{\CCvoltage}{{V_\mathrm{CC}}}
+\newcommand{\CCvoltage}{{V_\mathrm{0, CC}}}
 \newcommand{\CCfrequency}{{f_\mathrm{CC}}}
 
 
