another notation of x mean

--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -21,6 +21,8 @@ Below, two properties of the arithmetic mean are discussed as they are used in t
     \end{equation}
 \end{itemize}
 
+Another notation for the arithmetic mean that is often found in bibliography is, $\bar{x}$. 
+
 
 \normalsize{\textbf{Root mean square}}\\
 In the classical definition in mathematics, the root mean square (rms) is an alternative to the arithmetic mean and is defined as:
