--- a/symbols.tex
+++ b/symbols.tex
@@ -1,8 +1,8 @@
 \nomenclature[01]{\(  \mathcal{L}  \)}{Instantaneous luminosity of a collider.}
 \nomenclature[02]{\(f_\mathrm{frev}\), $\omega_\mathrm{frev}$}{Revolution frequency of the machine in [Hz] and in [rad/s] respectively.} 
 \nomenclature[03]{\(\sigma_x\),  \(\sigma_y\)}{Horizontal and vertical rms beam size in [m].} 
-\nomenclature[04]{$\sigma_z$}{rms bunch lengt in [m].} 
-\nomenclature[05]{\(\sigma_t\)}{rms bunch lengt in [s].} 
+\nomenclature[04]{$\sigma_z$, $\sigma_t$, $\sigma_\phi$}{rms bunch length in units of [m], [s] and [rad] respectively.} 
+%\nomenclature[05]{\(\sigma_t\)}{rms bunch lengt in [s].} 
 \nomenclature[06]{$\mathbf{F}_L$}{Lorentz force vector.}
 \nomenclature[07]{$\mathbf{E}$}{Electric field vector.}
 \nomenclature[08]{$\mathbf{B}$}{Magnetic field vector.}
@@ -54,3 +54,5 @@
 \nomenclature[53]{$i$}{Imaginary unit.}
 \nomenclature[54]{$V_\mathrm{0, CC}$}{Peak amplitude of the Crab Cavity voltage.}
 \nomenclature[55]{$f_\mathrm{CC}$}{Frequency of the Crab Cavity.}
+\nomenclature[56]{$\Delta A$}{Relative devitation from the nominal amplitude of the signal or amplitude noise (no units).}
+\nomenclature[57]{$\Delta \phi$}{Devitation from the nominal phase of the signal or phase noise in units of [$\mathrm{rad^2}$].}
