--- a/symbols.tex
+++ b/symbols.tex
@@ -54,5 +54,7 @@
 \nomenclature[53]{$i$}{Imaginary unit.}
 \nomenclature[54]{$V_\mathrm{0, CC}$}{Peak amplitude of the Crab Cavity voltage.}
 \nomenclature[55]{$f_\mathrm{CC}$}{Frequency of the Crab Cavity.}
-\nomenclature[56]{$\Delta A$}{Relative devitation from the nominal amplitude of the signal or amplitude noise (no units).}
-\nomenclature[57]{$\Delta \phi$}{Devitation from the nominal phase of the signal or phase noise in units of [$\mathrm{rad^2}$].}
+\nomenclature[56]{$\phi_\mathrm{CC}$}{Phase of the Crab Cavity.}
+\nomenclature[57]{$\beta_{u, \mathrm{CC}}$, $\alpha_{u, \mathrm{CC}}$, $D_{u, \mathrm{CC}}$}{Transverse beta and alpha and dispersion functions at the location of Crab Cavity, with $u=(x,y)$.}
+\nomenclature[58]{$\Delta A$}{Relative devitation from the nominal amplitude of the signal or amplitude noise (no units).}
+\nomenclature[59]{$\Delta \phi$}{Devitation from the nominal phase of the signal or phase noise in units of [$\mathrm{rad^2}$].}
