checkpoint for emit growth formulas

--- a/symbols.tex
+++ b/symbols.tex
@@ -58,3 +58,4 @@
 \nomenclature[57]{$\beta_{u, \mathrm{CC}}$, $\alpha_{u, \mathrm{CC}}$, $D_{u, \mathrm{CC}}$}{Transverse beta and alpha and dispersion functions at the location of Crab Cavity, with $u=(x,y)$.}
 \nomenclature[58]{$\Delta A$}{Relative devitation from the nominal amplitude of the signal or amplitude noise (no units).}
 \nomenclature[59]{$\Delta \phi$}{Devitation from the nominal phase of the signal or phase noise in units of [$\mathrm{rad^2}$].}
+\nomenclature[60]{$S_{\Delta A}$, $S_{\Delta \phi}$ }{Power spectral density of amplitude and phase noise signal in units of [1/Hz] and [$\mathrm{rad^2/Hz}$], respectively.}
