finalise theroetical formulas for emittance growth due to cc phase and amplitude noise

--- a/symbols.tex
+++ b/symbols.tex
@@ -59,3 +59,7 @@
 \nomenclature[58]{$\Delta A$}{Relative devitation from the nominal amplitude of the signal or amplitude noise (no units).}
 \nomenclature[59]{$\Delta \phi$}{Devitation from the nominal phase of the signal or phase noise in units of [$\mathrm{rad^2}$].}
 \nomenclature[60]{$S_{\Delta A}$, $S_{\Delta \phi}$ }{Power spectral density of amplitude and phase noise signal in units of [1/Hz] and [$\mathrm{rad^2/Hz}$], respectively.}
+\nomenclature[61]{$I_n(x)$}{Modified Bessel function of the first kind.}
+\nomenclature[62]{$\Gamma$}{Gamma function.}
+
+
