first draft of complete chapter 3

--- a/references.bib
+++ b/references.bib
@@ -576,6 +576,32 @@ http://emetral.web.cern.ch/JUAS/2016/LongitudinalBeamDynamics_JUAS2016_EM.pdf},
   url = {https://link.aps.org/doi/10.1103/PhysRevSTAB.18.101001}
 }
 
+@techreport{Toge:475260,
+      author        = "Toge, N",
+      title         = "{KEK B-factory Design Report}",
+      institution   = "KEK",
+      address       = "Tsukuba",
+      reportNumber  = "KEK-Report-95-7",
+      year          = "1995",
+      url           = "https://cds.cern.ch/record/475260",
+}
+
+@article{PhysRevSTAB.14.111003,
+  title = {Response of colliding beam-beam system to harmonic excitation due to crab-cavity rf phase modulation},
+  author = {Ohmi, K. and Tom\'as, R. and Funakoshi, Y. and Calaga, R. and Ieiri, T. and Morita, Y. and Nakanishi, K. and Oide, K. and Ohnishi, Y. and Sun, Y. and Tobiyama, M. and Zimmermann, F.},
+  journal = {Phys. Rev. ST Accel. Beams},
+  volume = {14},
+  issue = {11},
+  pages = {111003},
+  numpages = {7},
+  year = {2011},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevSTAB.14.111003},
+  url = {https://link.aps.org/doi/10.1103/PhysRevSTAB.14.111003}
+}
+
+
 @article{Calaga:1451286,
       author        = "Calaga, R and Ficcadenti, L and Metral, E and Tomas, R and
                        Tuckmantel, J and Zimmermann, F",
