section 2.1 comments andy

--- a/symbols.tex
+++ b/symbols.tex
@@ -1,8 +1,8 @@
 \nomenclature[01]{\(  \mathcal{L}  \)}{Instantaneous luminosity of a collider.}
-\nomenclature[02]{\(f_\mathrm{frev}\), $\omega_\mathrm{frev}$}{Revolution frequency of the machine in [Hz] and in [rad/s] respectively.} 
+\nomenclature[02]{\(f_\mathrm{rev}\), $\omega_\mathrm{rev}$}{Revolution frequency of the machine in [Hz] and in [rad/s] respectively.} 
 \nomenclature[03]{\(\sigma_x\),  \(\sigma_y\)}{Horizontal and vertical rms beam size in [m].} 
 \nomenclature[04]{$\sigma_z$, $\sigma_t$, $\sigma_\phi$}{rms bunch length in units of [m], [s] and [rad] respectively.} 
-%\nomenclature[05]{\(\sigma_t\)}{rms bunch lengt in [s].} 
+\nomenclature[05]{$C$}{Circumference of the accelerator.} 
 \nomenclature[06]{$\mathbf{F}_L$}{Lorentz force vector.}
 \nomenclature[07]{$\mathbf{E}$}{Electric field vector.}
 \nomenclature[08]{$\mathbf{B}$}{Magnetic field vector.}
@@ -20,7 +20,7 @@
 \nomenclature[20]{$(z,\delta)$}{Longitudinal co-ordinates: position in units of [m] and momentum offset (no units).} % or conjugate momentum
 \nomenclature[21]{$(p_x, p_y, p_z)$}{Particle's momentum in the horizontal, vertical and longitudinal plane respectively.} 
 \nomenclature[22]{$t$}{Time in [s].} 
-\nomenclature[23]{$b_n$, $\alpha_n$}{Normal and skew multipole coefficients.} 
+\nomenclature[23]{$b_n$, $a_n$}{Normal and skew multipole coefficients.} 
 \nomenclature[24]{$k_n$}{Normalised normal multipole coefficient.} 
 \nomenclature[25]{$\psi_u(s)$}{Phase advance from the start of the ring, $s_0$, where $u=(x,y)$.} 
 \nomenclature[26]{$\Delta \psi_u$}{Phase advance between two locations along the ring, with $u=(x,y)$.} 
