andy's saving ending comment

--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,11 @@
 \newcommand{\CCvoltage}{{V_\mathrm{0, CC}}}
 \newcommand{\CCfrequency}{{f_\mathrm{CC}}}
 
+% Commands to avoid breaking words across lines in Latex
+\tolerance=1
+\emergencystretch=\maxdimen
+\exhyphenpenalty=10000
+\hyphenpenalty=10000
 
 \setcounter{tocdepth}{5} % These lines are needed for subsubsection to appear
 \setcounter{secnumdepth}{5}
