correct definition and equations of linear dynamics

--- a/references.bib
+++ b/references.bib
@@ -259,6 +259,14 @@ of HL-LHC Double Quarter Wave Crab Cavities},
       url           = "https://cds.cern.ch/record/1425444",
 }
 
+@misc{Latina_juas,
+  title = {Introduction to Transverse Beam Dynamics},
+  author = {Andrea Latina},
+  url  =  {https://indico.cern.ch/event/471931/contributions/1149878/attachments/1214721/1794333/Lectures.pdf},
+  note = {Accessed: 02-08-2022},
+}
+
+
 @article{Floquet1883,
 author = {Floquet, G.},
 journal = {Annales scientifiques de l'École Normale Supérieure},
