udpate definitions of refrence particle and trajectory

--- a/symbols.tex
+++ b/symbols.tex
@@ -2,7 +2,7 @@
 \nomenclature[02]{\(f_\mathrm{rev}\), $\omega_\mathrm{rev}$}{Revolution frequency of the machine in [Hz] and in [rad/s] respectively.} 
 \nomenclature[03]{\(\sigma_x\),  \(\sigma_y\)}{Horizontal and vertical rms beam size in [m].} 
 \nomenclature[04]{$\sigma_z$, $\sigma_t$, $\sigma_\phi$}{rms bunch length in units of [m], [s] and [rad] respectively.} 
-\nomenclature[05]{$C$}{Circumference of the accelerator.} 
+\nomenclature[05]{$C_0$}{Circumference of the accelerator.} 
 \nomenclature[06]{$\mathbf{F}_L$}{Lorentz force vector.}
 \nomenclature[07]{$\mathbf{E}$}{Electric field vector.}
 \nomenclature[08]{$\mathbf{B}$}{Magnetic field vector.}
