add some simulation parameters

--- a/main.tex
+++ b/main.tex
@@ -15,7 +15,8 @@
 \newcommand{\frev}{{f_\mathrm{rev}}}
 \newcommand{\CCvoltage}{{V_\mathrm{0, CC}}}
 \newcommand{\CCfrequency}{{f_\mathrm{CC}}}
-
+\newcommand{\Qx}{{Q_{x0}}}
+\newcommand{\Qy}{{Q_{y0}}}
 % Commands to avoid breaking words across lines in Latex
 \tolerance=1
 \emergencystretch=\maxdimen
