introduce why we need coherent tune shift with intensity

--- a/references.bib
+++ b/references.bib
@@ -1176,3 +1176,48 @@ doi = {10.18429/JACoW-IPAC2021-WEPAB215}
   year={2008},
   note = {Accessed: 14-07-2022},
 }
+
+@techreport{Bartolini:702438,
+      author        = "Bartolini, R and Schmidt, F",
+      title         = "{A Computer Code for Frequency Analysis of Non-Linear
+                       Betatron Motion}",
+      institution   = "CERN",
+      address       = "Geneva",
+      reportNumber  = "SL-Note-98-017-AP",
+      month         = "Feb",
+      year          = "1998",
+      url           = "https://cds.cern.ch/record/702438",
+}
+
+@article{LASKAR1990266,
+title = {The chaotic motion of the solar system: A numerical estimate of the size of the chaotic zones},
+journal = {Icarus},
+volume = {88},
+number = {2},
+pages = {266-291},
+year = {1990},
+issn = {0019-1035},
+doi = {https://doi.org/10.1016/0019-1035(90)90084-M},
+url = {https://www.sciencedirect.com/science/article/pii/001910359090084M},
+author = {J. Laskar},
+}
+
+@article{Kostoglou:2289645,
+      author        = "Kostoglou, Sofia and Karastathis, Nikolaos and
+                       Papaphilippou, Yannis and Pellegrini, Dario and Zisopoulos,
+                       Panagiotis",
+      title         = "{Development of Computational Tools for Noise Studies in
+                       the LHC}",
+      reportNumber  = "CERN-ACC-2017-184",
+      pages         = "THPAB044. 4 p",
+      year          = "2017",
+      url           = "https://cds.cern.ch/record/2289645",
+      doi           = "10.18429/JACoW-IPAC2017-THPAB044",
+}
+
+
+@misc{nafflib_repository,
+  title = {NAFFlib code repository},
+  url  =  {https://github.com/PyCOMPLETE/NAFFlib},
+  note = {Accessed: 05-08-2022},
+}
