add some citation on chapter 2

--- a/references.bib
+++ b/references.bib
@@ -609,6 +609,20 @@ http://emetral.web.cern.ch/JUAS/2016/LongitudinalBeamDynamics_JUAS2016_EM.pdf},
   url = {https://link.aps.org/doi/10.1103/PhysRevSTAB.14.111003}
 }
 
+@article{PhysRevAccelBeams.23.124402,
+  title = {Fast-slow mode coupling instability for coasting beams in the presence of detuning impedance},
+  author = {Biancacci, N. and M\'etral, E. and Migliorati, M.},
+  journal = {Phys. Rev. Accel. Beams},
+  volume = {23},
+  issue = {12},
+  pages = {124402},
+  numpages = {7},
+  year = {2020},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevAccelBeams.23.124402},
+  url = {https://link.aps.org/doi/10.1103/PhysRevAccelBeams.23.124402}
+}
 
 @article{Calaga:1451286,
       author        = "Calaga, R and Ficcadenti, L and Metral, E and Tomas, R and
@@ -1221,3 +1235,6 @@ author = {J. Laskar},
   url  =  {https://github.com/PyCOMPLETE/NAFFlib},
   note = {Accessed: 05-08-2022},
 }
+
+
+
