one step before showing the first results of the cohernet tune shift with amplitude

--- a/symbols.tex
+++ b/symbols.tex
@@ -9,7 +9,7 @@
 \nomenclature[09]{$\mathbf{v}$}{Velocity vector.}
 \nomenclature[10]{$C$}{Circumference of an accelerator ring.}
 \nomenclature[11]{$R$}{Radius of an accelerator ring.}
-\nomenclature[12]{$E_0, p_0, v_0$}{Energy, momentum and velocity of the reference particle.}
+\nomenclature[12]{$E_0, p_0, v_0$}{Reference energy, momentum and velocity.}
 \nomenclature[13]{$\beta_0, \gamma_0$}{Relativistic beta and gamma (Lorentz factor).}
 \nomenclature[14]{$e$, $m_p$}{The proton charge and rest mass respectively.}
 \nomenclature[15]{$\rho$}{Bending radius.}
@@ -61,5 +61,5 @@
 \nomenclature[60]{$S_{\Delta A}$, $S_{\Delta \phi}$ }{Power spectral density of amplitude and phase noise signal in units of [1/Hz] and [$\mathrm{rad^2/Hz}$], respectively.}
 \nomenclature[61]{$I_n(x)$}{Modified Bessel function of the first kind.}
 \nomenclature[62]{$\Gamma$}{Gamma function.}
-
-
+\nomenclature[63]{$N_\mathrm{mp}$}{Number of macroparticles used in PyHEADTAIL simulations.}
+\nomenclature[64]{$N_\mathrm{turns}$}{Number of turns used in PyHEADTAIL simulations.}
