add pyheadtail implementation

--- a/references.bib
+++ b/references.bib
@@ -1238,3 +1238,35 @@ author = {J. Laskar},
 
 
 
+@thesis{Beck:2683038,
+      author        = "Beck, Mario",
+      title         = "{Numerical and experimental studies to model and reduce
+                       the impedance in the CERN Super Proton Synchrotron (SPS).
+                       Numerische und experimentelle Studien zur Modellierung und
+                       Reduzierung der Strahlimpedanz im Super Proton Synchrotron
+                       (SPS) Teilchenbeschleuniger}",
+      month         = "Dec",
+      year          = "2018",
+      url           = "http://cds.cern.ch/record/2683038",
+      note          = "Presented 08 Feb 2019",
+}
+
+@article{Bartosik:1742183,
+      author        = "Bartosik, H and Iadarola, G and Papaphilippou, Y and
+                       Rumolo, G and Salvant, B and Zannini, C",
+      title         = "{TMCI thresholds for LHC single bunches in the CERN SPS
+                       and comparison with simulations}",
+      reportNumber  = "CERN-ACC-2014-0119",
+      pages         = "4 p",
+      month         = "Jun",
+      year          = "2016",
+      url           = "https://cds.cern.ch/record/1742183",
+}
+
+@misc{sps_impedance_measurements_vs_model,
+  title = {SPS impedance-induced observables pre and post LS2},
+  author = {Carlo Zannini et al},
+  url  =  {https://indico.cern.ch/event/919160/contributions/3863191/attachments/2040319/3417759/SPS_pre_and_postLS2_HSC.pdf},
+  note = {Accessed: 06-08-2022},
+}
+
