--- a/main.tex
+++ b/main.tex
@@ -80,7 +80,7 @@
 \chapter{Basics of accelerator beam dynamics}\label{Ch:theory}
 \input{chapters/chapter02}
 
-\chapter{Theory of Crab Cavity noise induced emittance growth}\label{Ch:CC_noise_theory}
+\chapter{Theory of Crab Cavity noise-induced emittance growth}\label{Ch:CC_noise_theory}
 \input{chapters/chapter03}
 
 \chapter{Calibration of the Crab Cavities for the SPS tests in 2018}\label{Ch:CC_set_up}
