add gaussian distribuion

--- a/main.tex
+++ b/main.tex
@@ -98,7 +98,7 @@
 \chapter{Simulation studies: Suppression mechanism from the beam transverse impedance}\label{Ch:suppression_impedances}\label{Ch:suppression_impedance}
 \input{chapters/chapter07}
 
-\chapter{Experimental studies 2021}
+\chapter{Experimental studies 2022}\label{Ch:experimental_CC_2022}
 \input{chapters/chapter08}
 
 \chapter{Simple model of describing the decoherence suppression from impedance}
@@ -109,7 +109,7 @@
 
 
 
-\chapter{Conclusion}
+\chapter{Conclusion}\label{Ch:conclusion}
 \input{chapters/conclusion}
 
 % The end matter
