update equations for modelling amplitude and phase noise

--- a/symbols.tex
+++ b/symbols.tex
@@ -61,5 +61,5 @@
 \nomenclature[60]{$S_{\Delta A}$, $S_{\Delta \phi}$ }{Power spectral density of amplitude and phase noise signal in units of [1/Hz] and [$\mathrm{rad^2/Hz}$], respectively.}
 \nomenclature[61]{$I_n(x)$}{Modified Bessel function of the first kind.}
 \nomenclature[62]{$\Gamma$}{Gamma function.}
-\nomenclature[63]{$N_\mathrm{mp}$}{Number of macroparticles used in PyHEADTAIL simulations.}
-\nomenclature[64]{$N_\mathrm{turns}$}{Number of turns used in PyHEADTAIL simulations.}
+\nomenclature[63]{$N_\mathrm{mp}$}{Number of macroparticles used in PyHEADTAIL or Sixtracklib simulations.}
+\nomenclature[64]{$N_\mathrm{turns}$}{Number of turns used in PyHEADTAIL or Sixtracklib simulations.}
