decimal part of tune

--- a/symbols.tex
+++ b/symbols.tex
@@ -63,3 +63,4 @@
 \nomenclature[62]{$\Gamma$}{Gamma function.}
 \nomenclature[63]{$N_\mathrm{mp}$}{Number of macroparticles used in PyHEADTAIL or Sixtracklib simulations.}
 \nomenclature[64]{$N_\mathrm{turns}$}{Number of turns used in PyHEADTAIL or Sixtracklib simulations.}
+\nomenclature[65]{$q_x, q_y, q_s$}{Decimal part of the horizontal betatron tune, vertical betatron tune and synchrotron tune respectively.}
