add figures for CC noise at 200 Mhz

--- a/references.bib
+++ b/references.bib
@@ -1270,3 +1270,9 @@ author = {J. Laskar},
   note = {Accessed: 06-08-2022},
 }
 
+@misc{updated_sps_wakfields_model,
+  title = {Updated SPS wakefields model repository},
+  author = {},
+  url  =  {https://github.com/natriant/exploring_SPS/tree/master/updated_wakefields_model},
+  note = {Accessed: 12-08-2022},
+}
