add figures for the linear chromaticity scan

--- a/references.bib
+++ b/references.bib
@@ -1276,3 +1276,16 @@ author = {J. Laskar},
   url  =  {https://github.com/natriant/exploring_SPS/tree/master/updated_wakefields_model},
   note = {Accessed: 12-08-2022},
 }
+
+@article{Calaga:1451286,
+      author        = "Calaga, R and Ficcadenti, L and Metral, E and Tomas, R and
+                       Tuckmantel, J and Zimmermann, F",
+      title         = "{Proton-beam emittance growth in SPS coasts}",
+      journal       = "Conf. Proc.",
+      reportNumber  = "EuCARD-CON-2012-011, CERN-ATS-2012-077",
+      volume        = "C1205201",
+      pages         = "THPPP007. 3 p",
+      month         = "May",
+      year          = "2012",
+      url           = "https://cds.cern.ch/record/1451286",
+}
