start historical considerations and motivation

--- a/references.bib
+++ b/references.bib
@@ -1289,3 +1289,16 @@ author = {J. Laskar},
       year          = "2012",
       url           = "https://cds.cern.ch/record/1451286",
 }
+
+@article{Alexahin:314169,
+      author        = "Alexahin, Yu I",
+      title         = "{On the Landau Damping and Decoherence of Transverse
+                       Dipole Oscillations in Colliding Beams}",
+      journal       = "Part. Accel.",
+      reportNumber  = "CERN-SL-96-064-AP",
+      volume        = "59",
+      pages         = "43-74. 19 p",
+      month         = "Aug",
+      year          = "1996",
+      url           = "https://cds.cern.ch/record/314169",
+}
