add references to past studies

--- a/references.bib
+++ b/references.bib
@@ -1302,3 +1302,67 @@ author = {J. Laskar},
       year          = "1996",
       url           = "https://cds.cern.ch/record/314169",
 }
+
+@article{QIANG201853,
+title = {Simulation of beam–beam interaction with crab cavities for LHC upgrade},
+journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+volume = {900},
+pages = {53-59},
+year = {2018},
+issn = {0168-9002},
+doi = {https://doi.org/10.1016/j.nima.2018.05.055},
+url = {https://www.sciencedirect.com/science/article/pii/S0168900218306740},
+author = {J. Qiang and S. Paret and A. Ratti and J. Barranco and T. Pieloni and G. Arduini and X. Buffat and Y. Papaphilippou}
+}
+
+@article{PhysRevAccelBeams.23.021002,
+  title = {Modeling of the emittance growth due to decoherence in collision at the Large Hadron Collider},
+  author = {Buffat, X. and Herr, W. and Pieloni, T. and Valuch, D.},
+  journal = {Phys. Rev. Accel. Beams},
+  volume = {23},
+  issue = {2},
+  pages = {021002},
+  numpages = {9},
+  year = {2020},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevAccelBeams.23.021002},
+  url = {https://link.aps.org/doi/10.1103/PhysRevAccelBeams.23.021002}
+}
+
+@article{PhysRevAccelBeams.24.011003,
+  title = {Emittance growth suppression with a multibunch feedback in high-energy hadron colliders: Numerical optimization of the gain and bandwidth},
+  author = {Furuseth, Sondre Vik and Buffat, Xavier and Pereira-Cubillo, Juan Sebasti\'an and Valuch, Daniel},
+  journal = {Phys. Rev. Accel. Beams},
+  volume = {24},
+  issue = {1},
+  pages = {011003},
+  numpages = {11},
+  year = {2021},
+  month = {Jan},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevAccelBeams.24.011003},
+  url = {https://link.aps.org/doi/10.1103/PhysRevAccelBeams.24.011003}
+}
+
+@article{Alexahin:497415,
+      author        = "Alexahin, Yu I and Grote, H and Herr, Werner and
+                       Zorzano-Mier, M P",
+      title         = "{Coherent Beam-Beam Effects in the LHC}",
+      reportNumber  = "LHC-Project-Report-469, CERN-LHC-Project-Report-469",
+      pages         = "10 p",
+      month         = "Apr",
+      year          = "2001",
+      url           = "https://cds.cern.ch/record/497415",
+}
+
+@techreport{Herr:486007,
+      author        = "Herr, Werner and Zorzano-Mier, M P",
+      title         = "{Coherent Dipole Modes for Multiple Interaction Regions}",
+      institution   = "CERN",
+      address       = "Geneva",
+      reportNumber  = "LHC-Project-Report-462, CERN-LHC-Project-Report-462",
+      month         = "Feb",
+      year          = "2001",
+      url           = "https://cds.cern.ch/record/486007",
+}
