finish historical considerations and motivation

--- a/references.bib
+++ b/references.bib
@@ -1366,3 +1366,18 @@ author = {J. Qiang and S. Paret and A. Ratti and J. Barranco and T. Pieloni and 
       year          = "2001",
       url           = "https://cds.cern.ch/record/486007",
 }
+@article{Herr:1982430,
+      author        = "Herr, W. and Pieloni, T.",
+      title         = "{Beam-Beam Effects}",
+      archivePrefix = "arXiv",
+      eprint        = "1601.05235",
+      reportNumber  = "arXiv:1601.05235",
+      pages         = "431-459. 29 p",
+      month         = "Jan",
+      year          = "2016",
+      url           = "https://cds.cern.ch/record/1982430",
+      note          = "29 pages, contribution to the CAS - CERN Accelerator
+                       School: Advanced Accelerator Physics Course, Trondheim,
+                       Norway, 18-29 Aug 2013",
+      doi           = "10.5170/CERN-2014-009.431",
+}
