explain shcottky noise spectrum and methodology

--- a/references.bib
+++ b/references.bib
@@ -1381,3 +1381,25 @@ author = {J. Qiang and S. Paret and A. Ratti and J. Barranco and T. Pieloni and 
                        Norway, 18-29 Aug 2013",
       doi           = "10.5170/CERN-2014-009.431",
 }
+
+@article{Caspers:1213284,
+      author        = "Caspers, Friedhelm",
+      title         = "{Schottky signals for longitudinal and transverse
+                       bunched-beam diagnostics}",
+      year          = "2009",
+      url           = "https://cds.cern.ch/record/1213284",
+      doi           = "10.5170/CERN-2009-005.407",
+}
+
+@article{Zorzano-Mier:446334,
+      author        = "Zorzano-Mier, M P and Zimmermann, Frank",
+      title         = "{Simulations of coherent beam-beam modes at the Large
+                       Hadron Collider}",
+      journal       = "Phys. Rev. Spec. Top. Accel. Beams",
+      reportNumber  = "4",
+      volume        = "3",
+      pages         = "044401",
+      year          = "2000",
+      url           = "https://cds.cern.ch/record/446334",
+      doi           = "10.1103/PhysRevSTAB.3.044401",
+}
