add appendix for calibrating current from strength k3

--- a/references.bib
+++ b/references.bib
@@ -1403,3 +1403,9 @@ author = {J. Qiang and S. Paret and A. Ratti and J. Barranco and T. Pieloni and 
       url           = "https://cds.cern.ch/record/446334",
       doi           = "10.1103/PhysRevSTAB.3.044401",
 }
+
+@MISC{Kruk_lhcsoftware,
+    author = {G. Kruk and S. Deghaye and M. Lamont and M. Misiowiec and W. Sliwinski},
+    title = {LHC SOFTWARE ARCHITECTURE [LSA] – EVOLUTION TOWARD LHC BEAM COMMISSIONING},
+    year = {}
+}
