start comment on instability 2022

--- a/references.bib
+++ b/references.bib
@@ -1409,3 +1409,25 @@ author = {J. Qiang and S. Paret and A. Ratti and J. Barranco and T. Pieloni and 
     title = {LHC SOFTWARE ARCHITECTURE [LSA] – EVOLUTION TOWARD LHC BEAM COMMISSIONING},
     year = {}
 }
+
+@techreport{Boccardi:1055568,
+      author        = "Boccardi, A and Gasior, M and Jones, R and Kasinski, K and
+                       Steinhagen, R J",
+      title         = "{The FPGA-based Continious FFT Tune Measurement System for
+                       the LHC and its test at the CERN SPS}",
+      institution   = "CERN",
+      address       = "Geneva",
+      reportNumber  = "CERN-AB-2007-062",
+      year          = "2007",
+      url           = "https://cds.cern.ch/record/1055568",
+}
+
+@misc{collective_effects_cas_li,
+  title = {Collective effects, Part IV: Coherent beam instabilities},
+  author = {K. Li},
+  url  =  {https://cas.web.cern.ch/sites/default/files/lectures/-27%20March%202022/Chavannes4_Instabilities.pdf},
+  note = {Accessed: 05-09-2022},
+}
+
+
+
